# consump_streamlit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
data/: h0_profile_15min_daily_avg.csv
self_consumption/: __init__.py  self_consumption_analysis.py  streamlit_app.py
