[project]
name = "consumption-app"
version = "0.1.0"
description = "Streamlit app for consumption analysis"
authors = [
    {name = "Your Name", email = "beyremkh@gmail.com"}
]
dependencies = [
    "streamlit",
    "numpy",
    "pandas",
    "plotly",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"