[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consumption-app"
version = "0.1.0"
description = "Streamlit app for energy consumption analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Beyrem khalfaoui", email = "beyremkh@gmail.com"}
]
dependencies = [
    "streamlit>=1.22.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotly>=5.3.0",
    "matplotlib>=3.4.0",
    "demandlib>=0.2.2"
]

[project.urls]
Homepage = "https://github.com/BeyremKh/consump_streamlit"
"Bug Tracker" = "https://github.com/BeyremKh/consump_streamlit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["self_consumption*"]
